--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,7 +11,7 @@
       <div class="pull-left">
         <%= form_tag sort_products_path, method: :get, class: "form-inline" do %>
           <%= label_tag "sort_type", t("sort"), class: "control-label" %>
-          <%= select_tag "product_sort_type", options_for_select(product_sort_list), class: "form-control" %>
+          <%= select_tag "product_sort_type", options_for_select(product_sort_list, params[:product_sort_type]), class: "form-control" %>
         <% end %>
       </div>
       <div class="pull-right">
@@ -21,7 +21,7 @@
         <% end %>
       </div>
     </div>
-    <table class="table table-striped">
+    <table class="table table-striped table-bordered table-hover">
       <thead class="thead-dark">
         <tr>
           <th>#</th>
@@ -83,7 +83,7 @@
             <div class="form-group">
               <%= label_tag "product_image", t("image"), class: "control-label col-sm-2" %>
               <div class="col-sm-10">
-                <%= file_field_tag "product[image]", class: "form-control" %>
+                <%= file_field_tag "product[image]", class: "form-control upload_img" %>
               </div>
             </div>
           </div>
